# zero

./: .gitignore  README.md
cli/: package.json  tsconfig.json
cli/src/: config.ts  index.ts  utils.ts
cli/src/commands/: agent.ts  dao.ts  proposal.ts  treasury.ts  vote.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  utils.rs
program/src/state/: agent.rs  dao.rs  mod.rs  proposal.rs  treasury.rs  vote.rs
sdk/: package.json
sdk/src/: index.ts  types.ts  utils.ts  zero.ts
sdk/src/accounts/: agent.ts  dao.ts  index.ts  proposal.ts  treasury.ts
sdk/src/instructions/: agent.ts  dao.ts  index.ts  proposal.ts  treasury.ts  vote.ts
